resources/styles.css
/* ... */
.header-wrapper{
  height: 140px;
}
.main-header.affix{
  width:100%;
  z-index:100;
  background-color:#faf9f6;
  top:30px;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
  padding-top: 20px;
}

.main-header.affix .logo{
  width:189px;
  top:20px;
}

.main-header.affix .title{
  font-size: 20px;
  position: relative;
  width:100%;
  padding-left: 40px;
}
.main-header.affix .title:before{
  height: 35px;
  left: 10px;
  top:20px;
  width: 1px;
}

.toprow td:last-child {
  text-align: right;
  background-color: transparent;
  min-width: 200px;
}

.panel {
  border: 0;
  border-radius: 0;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
  background-color: #f8f9fa;
  margin-bottom: 40px;
  min-height: 300px;
}

.panel:last-child, .panel-home, .panel-metrics,.panel-chart {
  margin-bottom: -30px;
}

.panel-password, .panel-save-users, .panel-delete-users, .panel-login{
  min-height: 600px;
}

.panel-body {
  padding: 0 40px 40px 40px;
}

.panel-heading {
  padding: 25px 40px;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
  position: relative;
  background-color: #fff !important;
  z-index: 2;
}

.panel-heading > .name, .translationHeading {
  color: #006699;
  font-size: 30px;
}

.panel-heading .budget {
  color: #6f6d65;
}


.table > thead > tr > th {
  border-bottom: 1px solid #DDD;
  text-align: left;
  padding: 20px 10px;
  color: #6f6d65;
  font-weight: 500;
}

.table > tbody > tr > td {
  border-top: 0;
  text-align: left;
  padding: 10px;
}

.table-collapse{
  color: #6f6d65 !important;
  width: 80%;
  margin: auto;


}
.table-collapse td {
  width: auto !important;
  text-align: center;
  font-weight: 300;

}
.table-collapse th{
  text-align: center;
  font-weight: 500;
  border-bottom: solid 1px lightgray;

}

.valueTable > thead > tr > th, .valueTable > tbody > tr > td {
  text-align: right !important;
  width: 75px;
}
.valueStripes > tbody > tr > td {
  background-color: #E6E6E6;
  border-top: 2px solid white;
}

.valueTable > thead > tr > th:first-child, .valueTable > tbody > tr > td:first-child {
  text-align: left !important;
  width: auto !important;
}

.userHomeTable > thead > tr > th, .userHomeTable > tbody > tr > td {
  text-align: left !important;
  border-top: 2px solid white;
}

.userHomeTable td:first-child {
  width: auto;
}

.userHomeTable td:nth-child(2) {
  width: 250px;
}

.userHomeTable td:nth-child(3), .userHomeTable td:nth-child(4),.userHomeTable td:nth-child(6) {
  width: 100px;
}

.userHomeTable td:nth-child(5) {
  width: 150px;
}

.userHomeTable > tbody > tr:nth-child(odd){
  background: #E6E6E6;
}

.table {
  margin-top: 20px;
}

.table-hover > tbody > tr:not(:last-child):hover td {
  background-color: #E6E6E6;
}

#translationTable textarea {
  width: 470px;
}

#translationTable td:nth-child(2) {
  width: 500px;
}
#translationTable .infoSource {
  word-break: break-all;
}

#translationTable td:first-child, #translationTable th:first-child {
  color: black;
  border-right: solid 1px lightgray;
}

#translationTable > tbody > tr:hover td, .user-table > tbody > tr:hover td {
  background-color: #E6E6E6;
}

#adminMetricTable tr.metric {
  border-bottom: solid 1px #DDD;
}

#metrics-table tbody {
  border: none;
}

#metrics-table tbody:nth-child(odd) {
  background: rgba(240, 240, 240, 0.5);
}

#metrics-table tbody:hover {
  background: rgba(240, 240, 240, 1);
}

.form-control {
  max-width: 815px;
}

.smallInputFields {
  max-width: 160px !important;
}

.mediumInputFields {
  max-width: 322px !important;
}

.missingGoals {
  text-align: center;
  padding: 200px;
}

.userViewPublicDescription{
  font-size: 12px;
}

.startLevel, .targetLevel {
  text-align: right !important;
}

.saveGoalButton, .cancelGoalButton, .publicButton {
  height: 35px;
  width: 35px;
  background-color: Transparent;
  font-family: "Glyphicons Halflings";
  padding: 0;
  font-size: 16px;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
  overflow: hidden;
  color: gray;
  margin-left: -15px;
}

.action-button .saveGoalButton:hover {
  color: green;
  background-color: transparent;
}

.cancelGoalButton:hover {
  color: red;
  background-color: transparent;
}

.modifyButton, .metricsButton, .deleteButton, .translationButton, .glyphicon-sort, .chart-button, .small-chart-button {
  background-color: Transparent;
  border: none;
  cursor: pointer;
  overflow: hidden;
  color: gray;
  font-size: 16px !important;
}

tr.metric .glyphicon-sort {
  padding-top: 15px;
}

.modifyButton:hover, .metricsButton:hover, .deleteButton:hover, .glyphicon-sort:hover, .chart-button:hover, .small-chart-button:hover{
  color: #ffcc00;
  background-color: transparent;
}

.measured .glyphicon-pencil, .forecasted .glyphicon-pencil, .yearlyBudget .glyphicon-pencil {
  color: lightgray !important;
}

.glyphicon-new-window, .glyphicon-th-list{
  color: gray;
}

.measured .glyphicon-pencil:hover, .forecasted .glyphicon-pencil:hover, .yearlyBudget .glyphicon-pencil:hover, .glyphicon-new-window:hover, .glyphicon-th-list:hover {
  color: #ffcc00 !important;

}

.forecasted {
  white-space: nowrap;
}

.publicButton {
  margin: 0 !important;
  height: 23px !important;
  width: 28px !important;
  margin-bottom: 5px !important;
}

.chart-button {
  float: right;
  font-size: 20px;

}
.chart-button .glyphicon-stats {
  font-size: 30px;
}

#chart {
  margin: 0 !important;
  padding: 0 !important;
  display: block;
  height: 600px;
}

.legendRow {
  height: 14px;
  width: 14px;
  display: inline-block;
}

.chartLegend {
  background-color: white;
  padding-bottom: 20px;
}

.legendMetricName {
  font-size: 16px;
  margin-bottom: 10px;
  padding-left: 10px;
}

.legendTable {
  margin-left: 40px;
}

.chartExplanation {
  padding: 20px 0 0 10px;
  font-size: 14px;
}

.glyphicon-info-sign {
  padding-top: 25px;
}

.hand-pointer {
  cursor: pointer;
  cursor: hand;
}
/* ... */

